--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
                 <img src="unnamed.png">
             </div>
             <div class="header-right">
-                <a href="#">language</a>
-                <a href="#">about</a>
-                <a href="#">enroll</a>
-                <a href="#">login</a>
+                <div class="ni">
+                    <a href="#">language</a>
+                    <a href="#">about</a>
+                    <a href="#">enroll</a>
+                    <a href="#">login</a>
+                </div> 
                 <a href="#" class="icon"><span class="fa fa-bars"></span></a>
             </div>
         </div>
