--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <img src="unnamed.png">
             </div>
             <div class="header-right">
-                <div class="ni">
-                    <a href="#">language</a>
-                    <a href="#">about</a>
-                    <a href="#">enroll</a>
-                    <a href="#">login</a>
-                </div> 
+               
+                <a href="#" class="ni">language</a>
+                <a href="#" class ="ni">about</a>
+                <a href="#" class="ni">enroll</a>
+                <a href="#" class="ni">login</a>
+                
                 <a href="#" class="icon"><span class="fa fa-bars"></span></a>
             </div>
         </div>
